--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,6 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=HimnarioApp;TrustServerCertificate=True;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=HimnarioApp;TrustServerCertificate=True;Trusted_Connection=true;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=localhost;Database=IdentityDb;TrustServerCertificate=True;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
+  "JWTSettings": {
+    "Key": "uYrmsE6bCHEfn4wfdrhy06ieSf09h5yDFutu0yj6wtyif",
+    "Issuer": "ApiHimnarioIssuer",
+    "Audience": "ApiAudience",
+    "DurationInMinutes": "10"
   }
 }
